test_regress/t/t_tagged_if.out
%Warning-SHORTREAL: t/t_tagged_if.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error: t/t_tagged_if.v:133:19: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  133 |     if (v matches tagged Valid .n)
      |                   ^~~~~~
        t/t_tagged_if.v:133:32: ... Resolving this reference
  133 |     if (v matches tagged Valid .n)
      |                                ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_if.v:134:16: Can't find definition of variable: 'n'
  134 |       result = n;
      |                ^
%Error: t/t_tagged_if.v:144:24: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  144 |     else if (v matches tagged Valid .n)
      |                        ^~~~~~
        t/t_tagged_if.v:144:37: ... Resolving this reference
  144 |     else if (v matches tagged Valid .n)
      |                                     ^
%Error: t/t_tagged_if.v:151:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  151 |     if (wt matches tagged Wide60 .w)
      |                    ^~~~~~
        t/t_tagged_if.v:151:34: ... Resolving this reference
  151 |     if (wt matches tagged Wide60 .w)
      |                                  ^
%Error: t/t_tagged_if.v:152:23: Can't find definition of variable: 'w'
                              : ... Suggested alternative: 'wt'
  152 |       wide60_result = w;
      |                       ^
%Error: t/t_tagged_if.v:160:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  160 |     if (wt matches tagged Wide90 .w)
      |                    ^~~~~~
        t/t_tagged_if.v:160:34: ... Resolving this reference
  160 |     if (wt matches tagged Wide90 .w)
      |                                  ^
%Error: t/t_tagged_if.v:169:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  169 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |                    ^~~~~~
        t/t_tagged_if.v:169:43: ... Resolving this reference
  169 |     if (wt matches tagged Byte8NonZeroLSB .b)
      |                                           ^
%Error: t/t_tagged_if.v:170:16: Can't find definition of variable: 'b'
  170 |       result = b;
      |                ^
%Error: t/t_tagged_if.v:178:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  178 |     if (wt matches tagged Word32LittleEndian .w)
      |                    ^~~~~~
        t/t_tagged_if.v:178:46: ... Resolving this reference
  178 |     if (wt matches tagged Word32LittleEndian .w)
      |                                              ^
%Error: t/t_tagged_if.v:187:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  187 |     if (at matches tagged Arr .a)
      |                    ^~~~~~
        t/t_tagged_if.v:187:31: ... Resolving this reference
  187 |     if (at matches tagged Arr .a)
      |                               ^
%Error: t/t_tagged_if.v:188:16: Can't find definition of variable: 'a'
                              : ... Suggested alternative: 'at'
  188 |       result = a[0] + a[1] + a[2] + a[3];
      |                ^
%Error: t/t_tagged_if.v:196:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  196 |     if (at matches tagged Scalar .s)
      |                    ^~~~~~
        t/t_tagged_if.v:196:34: ... Resolving this reference
  196 |     if (at matches tagged Scalar .s)
      |                                  ^
%Error: t/t_tagged_if.v:197:16: Can't find definition of variable: 's'
                              : ... Suggested alternative: 'st'
  197 |       result = s;
      |                ^
%Error: t/t_tagged_if.v:214:23: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  214 |     if (instr matches tagged Jmp .j &&&
      |                       ^~~~~~
        t/t_tagged_if.v:214:34: ... Resolving this reference
  214 |     if (instr matches tagged Jmp .j &&&
      |                                  ^
%Error: t/t_tagged_if.v:215:8: Can't find definition of variable: 'j'
  215 |        j matches tagged JmpC '{cc:.c, addr:.a})
      |        ^
%Error: t/t_tagged_if.v:224:19: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  224 |     if (v matches tagged Valid .n &&& (n > 50))
      |                   ^~~~~~
        t/t_tagged_if.v:224:32: ... Resolving this reference
  224 |     if (v matches tagged Valid .n &&& (n > 50))
      |                                ^
%Error: t/t_tagged_if.v:233:19: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  233 |     if (v matches tagged Valid .n &&& (n > 50))
      |                   ^~~~~~
        t/t_tagged_if.v:233:32: ... Resolving this reference
  233 |     if (v matches tagged Valid .n &&& (n > 50))
      |                                ^
%Error: t/t_tagged_if.v:242:19: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  242 |     if (v matches tagged Valid .x) begin
      |                   ^~~~~~
        t/t_tagged_if.v:242:32: ... Resolving this reference
  242 |     if (v matches tagged Valid .x) begin
      |                                ^
%Error: t/t_tagged_if.v:243:16: Can't find definition of variable: 'x'
  243 |       result = x;   
      |                ^
%Error: t/t_tagged_if.v:262:23: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  262 |     if (instr matches tagged Jmp .j &&&
      |                       ^~~~~~
        t/t_tagged_if.v:262:34: ... Resolving this reference
  262 |     if (instr matches tagged Jmp .j &&&
      |                                  ^
%Error: t/t_tagged_if.v:275:35: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  275 |     if (instr matches tagged Jmp (tagged JmpU .a))
      |                                   ^~~~~~
        t/t_tagged_if.v:275:47: ... Resolving this reference
  275 |     if (instr matches tagged Jmp (tagged JmpU .a))
      |                                               ^
%Error: t/t_tagged_if.v:319:21: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  319 |     if (clt matches tagged Obj .o)
      |                     ^~~~~~
        t/t_tagged_if.v:319:32: ... Resolving this reference
  319 |     if (clt matches tagged Obj .o)
      |                                ^
%Error: t/t_tagged_if.v:320:16: Can't find definition of scope/variable: 'o'
  320 |       result = o.value;
      |                ^
%Error: t/t_tagged_if.v:336:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  336 |     if (rt matches tagged RealVal .r) begin
      |                    ^~~~~~
        t/t_tagged_if.v:336:35: ... Resolving this reference
  336 |     if (rt matches tagged RealVal .r) begin
      |                                   ^
%Error: t/t_tagged_if.v:337:11: Can't find definition of variable: 'r'
                              : ... Suggested alternative: 'rt'
  337 |       if (r == 3.14159)
      |           ^
%Error: t/t_tagged_if.v:348:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  348 |     if (rt matches tagged ShortRealVal .r) begin
      |                    ^~~~~~
        t/t_tagged_if.v:348:40: ... Resolving this reference
  348 |     if (rt matches tagged ShortRealVal .r) begin
      |                                        ^
%Error: t/t_tagged_if.v:368:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  368 |     if (st matches tagged StrVal .s) begin
      |                    ^~~~~~
        t/t_tagged_if.v:368:34: ... Resolving this reference
  368 |     if (st matches tagged StrVal .s) begin
      |                                  ^
%Error: t/t_tagged_if.v:388:20: Syntax error: Not expecting TAGGED under a DOT in dotted expression
  388 |     if (et matches tagged ColorVal .c) begin
      |                    ^~~~~~
        t/t_tagged_if.v:388:36: ... Resolving this reference
  388 |     if (et matches tagged ColorVal .c) begin
      |                                    ^
%Error: t/t_tagged_if.v:389:11: Can't find definition of variable: 'c'
  389 |       if (c == GREEN)
      |           ^
%Error: Internal Error: t/t_tagged_if.v:251:36: ../V3Ast.h:#: AstNode is not of expected type, but instead has type 'PATBIND'
  251 |     if (instr matches tagged Add '{.r1, .r2, .rd})
      |                                    ^
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
